# final-project/docs/swagger.json
@@ -700,9 +700,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OTP verification successfully",
+                        "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/response.UserResponse"
                         }
                     },
                     "400": {
@@ -880,7 +880,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/request.PhotoRequest"
+                            "$ref": "#/definitions/request.PhotoUpdateRequest"
                         }
                     }
                 ],
@@ -1180,6 +1180,19 @@
                 }
             }
         },
+        "request.PhotoUpdateRequest": {
+            "type": "object",
+            "properties": {
+                "caption": {
+                    "type": "string",
+                    "example": "this is example caption photo"
+                },
+                "title": {
+                    "type": "string",
+                    "example": "title photo"
+                }
+            }
+        },
         "request.UserLoginRequest": {
             "type": "object",
             "properties": {
@@ -1241,7 +1254,7 @@
                 },
                 "confirm_password": {
                     "type": "string",
-                    "example": "password123456789"
+                    "example": "password12345678910"
                 },
                 "email": {
                     "type": "string",
@@ -1250,6 +1263,10 @@
                 "fullname": {
                     "type": "string",
                     "example": "hanisah fildza annafisah"
+                },
+                "new_password": {
+                    "type": "string",
+                    "example": "password12345678910"
                 },
                 "password": {
                     "type": "string",
